--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 repository: kwicmanual
 output: web
-topnav_title: 데이터솔루션 SOC 모니터링 매뉴얼 
+topnav_title: 기웅정보통신 모니터링 매뉴얼 
 site_title:
 company_name: Copyright KWIC
 
