--- a/_data/sidebars/manual_sidebar.yml
+++ b/_data/sidebars/manual_sidebar.yml
@@ -248,32 +248,8 @@ entries:
     output: web, pdf
     folderitems:
 
-      - title: 개인용 자동차보험료 비교
+      - title: 보험다모아
         url: /einsmarket_manual_01.html
-        output: web, pdf
-
-      - title: 제조사 조회
-        url: /einsmarket_manual_02.html
-        output: web, pdf
-      
-      - title: 차량명 조회
-        url: /einsmarket_manual_03.html
-        output: web, pdf
-      
-      - title: 차량 등록년도 조회
-        url: /einsmarket_manual_04.html
-        output: web, pdf
-      
-      - title: 세부 차량명 조회
-        url: /einsmarket_manual_05.html
-        output: web, pdf
-
-      - title: 세부 차량옵션 조회
-        url: /einsmarket_manual_06.html
-        output: web, pdf
-      
-      - title: 전체 차량정보조회
-        url: /einsmarket_manual_07.html
         output: web, pdf
 
 
