--- a/_data/sidebars/manual2_sidebar.yml
+++ b/_data/sidebars/manual2_sidebar.yml
@@ -2,8 +2,8 @@
 
 entries:
 - title: sidebar
-  product: 모니터링 운영매뉴얼
-  version: 1.0
+  product: 은행 사이트 매뉴얼
+  version: #1.0
   folders:
 
   - title:
