--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -1,29 +1,18 @@
-## Topnav single links
-## if you want to list an external url, use external_url instead of url. the theme will apply a different link base.
-# topnav:
-# - title: Topnav
-#   items:
-#     - title: GitHub
-#       external_url: https://github.com/tomjoht/documentation-theme-jekyll
-#     - title: News
-#       url: /news
-
-#Topnav dropdowns
 topnav_dropdowns:
 - title: Topnav dropdowns
   folders:
-    - title: 참고사이트
+    - title: 관리사이트
       folderitems:
-        - title: "그라파나(모니터링)"
+        - title: "Grafana(모니터링)"
           external_url: http://kwicmon.scraping.co.kr/ #http://121.189.16.174:3000/
         - title: "Kibana(SmartAIB)"
           external_url: https://kibana-soc.scraping.co.kr/
-        - title: "업무리스트 목록"
-          external_url: https://docs.google.com/spreadsheets/d/1NxnXvJfoezaetSoBpk3T7ONVHXpCgs_QONMcgR0xWtE/edit?usp=sharing
-        - title: "기웅서비스 현황판"
-          external_url: https://statuspage.scraping.co.kr/      #https://statuspage.scraping.co.kr/dashboard
         - title: "Kibana(api) - 외부접속X"
           external_url: http://datahub-kt.scraping.co.kr:5601/app/kibana     #121.189.16.61:5601
+        - title: "기웅서비스 현황판"
+          external_url: https://statuspage.scraping.co.kr/      #https://statuspage.scraping.co.kr/dashboard
+        - title: "모니터링 리스트"
+          external_url: https://docs.google.com/spreadsheets/d/1NxnXvJfoezaetSoBpk3T7ONVHXpCgs_QONMcgR0xWtE/edit?usp=sharing
         - title: "운영페이지 - 외부접속X"
           external_url: http://172.16.2.71:22005 
         
@@ -38,23 +27,23 @@ topnav_dropdowns:
           url: /card_manual_01.html
         - title: "기타"
           url: /manual_datahub.html
-        - title: "데이터 통계"
-          url: /statistics_introduction.html
 
-    - title: 근무자 매뉴얼
+    - title: 데이터 대시보드
       folderitems:
+        - title: "Kibana 매뉴얼"
+          url: /kibana_manual01.html
+        - title: "Grafana 매뉴얼"
+          url: /grafana_manual01.html
+
+    - title: 디몬팀
+      folderitems:
+        - title: "소개"
+          url: /dmon_introduce.html
         - title: "알바생 매뉴얼"
           url: /manual_introduction_alba.html
         - title: "디몬팀원 매뉴얼"
-          url: /manual_introduction_dmon.html
+          url: /manual_introduction_dmon01.html
 
-        # - title: "은행"
-        #   url: /p2_landing_page.html
+#테스트 방법
+#bundle exec jekyll serve
 
-# topnav:
-# - title: Topnav
-#   items:
-#     - title: 근무자 매뉴얼
-#       url: manual_introduction.html
-
-# Copyright 2021 Google LLC
